# agri-decision-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
api/: __init__.py  app.py
baseline/: __init__.py  heuristic_agent.py  runner.py
config/: __init__.py  env_presets.py
docs/: 01_problem_statement.md  02_design.md  03_prd_hld.md  04_judging_alignment.md  05_heuristic_agent_simulation_runs.md  06_hackathon_instructions_checklist.md
env/: __init__.py  action_validator.py  constants.py  environment.py  reward_engine.py  sensor_model.py  state_engine.py  transition_engine.py  weather_engine.py
grader/: __init__.py  base_grader.py  easy_grader.py  grader_factory.py  hard_grader.py  medium_grader.py  scoring_utils.py
models/: __init__.py  action_models.py  config_models.py  observation_models.py  reward_models.py  zone_models.py
scripts/: check_submission.py  openai_baseline.py  run_baseline.py  simulate_episode.py  smoke_test.py
server/: __init__.py  __main__.py  app.py
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py  task_registry.py
tests/: test_smoke.py
