[project]
name = "agri-decision-env"
version = "0.1.0"
description = "Agri Decision Environment API for OpenEnv Hackathon"
authors = [{ name = "Kavyankit Mishra" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Installable app packages (matches `main.py` / `inference.py` imports: api, baseline, config, env, grader, models, tasks).
[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "api*", "baseline*", "config*", "env*", "grader*", "models*", "tasks*"]
exclude = ["tests*"]

[tool.setuptools]
py-modules = ["main", "inference"]
